docs: add new blocks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,55 @@
     <link rel="icon" href="assets/favicon.ico">
  </head>
  <body>
-    
+    <header class = "header">
+      <div class = "container"></div>
+      <nav class="nav">
+         <ul class="nav-list">
+            <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+           <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+           <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+           <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+           <li class="nav-item"><a href="#code" class="nav-link"><Code></Code></a></li>
+           <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+           <li class="nav-item"><a href="#projects" class="nav-link"><Projects></Prog></a></li>
+           <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+           <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+         </ul>
+       </nav>
+    </header>
+    <main class = "main">
+      <div class = "container main-container">
+         <section class="section" id="profile">
+            <h1 class="section-title">"Profile"</h1>
+         </section>
+         <section class="section" id="contacts">
+            <h2 class="section-title">Contacts</h2> 
+         </section>
+         <section class="section" id="summary">
+            <h2 class="section-title">Summary</h2>
+         </section>
+         <section class="section" id="scills">
+            <h2 class="section-title">Scills</h2>
+         </section>
+         <section class="section" id="code">
+            <h2 class="section-title">Code</h2>
+         </section>
+         <section class="section" id="courses">
+            <h2 class="section-title">Courses</h2>
+         </section>
+         <section class="section" id="projects">
+            <h2 class="section-title">Projects</h2>
+         </section>
+         <section class="section" id="educftion">
+            <h2 class="section-title">Education</h2>
+         </section>
+         <section class="section" id="languages">
+            <h2 class="section-title">Languages</h2>
+         </section>
+      </div>
+    </main>
+    <footer class = "footer">
+      <div class = "container"></div>
+    </footer>
  </body>
  </html>    
