docs:changed some info

--- a/index.html
+++ b/index.html
@@ -2,32 +2,46 @@
  <html lang="en">
  <head>
     <meta charset="UTF-8">
+    <title>cv</title>
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cv</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/favicon.ico">
  </head>
  <body>
-    <header class = "header">
-      <div class = "container"></div>
-      <nav class="nav">
+    <header class="header">
+      <div class="container header-container">
+       <nav class="nav">
          <ul class="nav-list">
-            <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
-           <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-           <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-           <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-           <li class="nav-item"><a href="#code" class="nav-link"><Code></Code></a></li>
-           <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-           <li class="nav-item"><a href="#projects" class="nav-link"><Projects></Prog></a></li>
-           <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-           <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+           <li class="nav-item">
+            <a href="#contacts" class="nav-link">Contacts</a>
+           </li>
+           <li class="nav-item">
+            <a href="#summary" class="nav-link">Summary</a>
+           </li>
+           <li class="nav-item">
+            <a href="#skills" class="nav-link">Skills</a>
+           </li>
+           <li class="nav-item">
+            <a href="#code" class="nav-link"><Code></Code></a>
+           </li>
+           <li class="nav-item">
+            <a href="#projects" class="nav-link"><Projects></Prog></a>
+           </li>
+           <li class="nav-item">
+            <a href="#education" class="nav-link">Education</a>
+           </li>
+           <li class="nav-item">
+            <a href="#english" class="nav-link">English</a>
+           </li>
          </ul>
        </nav>
+      </div>
     </header>
     <main class = "main">
       <div class = "container main-container">
-         <section class="section" id="profile">
+         <section class="section section-profile" id="profile">
+            <img src="assets/img/my-photo.jpg" alt class="section-profile-photo">
             <h1 class="section-title">"Profile"</h1>
          </section>
          <section class="section" id="contacts">
