docs: add more info

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="assets/img/my-photo.jpg" alt class="section-profile-photo">
             <div class="section-profile-title">
                <h1 class="section-title main-title">
-               "Artiom Turulin"
+               Artiom Turulin
                </h1>
             </div>
          </section>
