docs: add almost all edits

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#education" class="nav-link">Education</a>
            </li>
            <li class="nav-item">
-            <a href="#english" class="nav-link">English</a>
+            <a href="#English" class="nav-link">English</a>
            </li>
          </ul>
        </nav>
@@ -70,9 +70,9 @@
          </section>
          <section class="section" id="summary">
             <h2 class="section-title">Summary</h2>
-            <p>"I am 33 and I want to change my life"</p>
+            <p>"I am 33 and I want to change my life. Character persistent - Nordic. Assiduous, steady"</p>
          </section>
-         <section class="section" id="scills">
+         <section class="section" id="skills">
             <h2 class="section-title">Skills</h2>
             <ul class="section-list">
                <li class="section-item">
@@ -113,8 +113,8 @@
             <h2 class="section-title">Education</h2>
             <p>Minsk State Automechanical College</p>
          </section>
-         <section class="section" id="languages">
-            <h2 class="section-title">Languages</h2>
+         <section class="section" id="English">
+            <h2 class="section-title">English</h2>
             <p> B1 - Pre-Intermediate</p>
          </section>
       </div>
