docs: add new info

--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
                ArtemTur
             </a>
          </div>
-         <a href="https://rs.school/js/" class="rss">
-            rs.school
-         </a>
+         <a href="https://rs.school/js/" class="rss"></a>
       </div>
     </footer>
  </body>
