fix: delete spaces

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
        </nav>
       </div>
     </header>
-    <main class = "main">
-      <div class = "container main-container">
+    <main class ="main">
+      <div class ="container main-container">
          <section class="section section-profile" id="profile">
-            <img src="assets/img/my-photo.jpg" alt class="section-profile-photo">
+            <img src="assets/img/my-photo.jpg" alt="Моё фото" class="section-profile-photo">
             <div class="section-profile-title">
                <h1 class="section-title main-title">
                Artiom Turulin
