fix: delete all spaces

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class ="main">
       <div class ="container main-container">
          <section class="section section-profile" id="profile">
-            <img src="assets/img/my-photo.jpg" alt="Моё фото" class="section-profile-photo">
+            <img src="assets/img/my-photo.jpg" alt="My-photo" class="section-profile-photo">
             <div class="section-profile-title">
                <h1 class="section-title main-title">
                Artiom Turulin
@@ -121,8 +121,8 @@
          </section>
       </div>
     </main>
-    <footer class = "footer">
-      <div class = "container footer-container">
+    <footer class ="footer">
+      <div class ="container footer-container">
          <div>
             © 2022
             <a href="https://github.com/ArtemTur" class="github nav-link">
