--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                </li>
                <li class="section-item contacts-item">
                   Discord:
-                  <a href="https://discord.com/invite/zUr7wWYPXE" title="github">ArtemTur#4088</a>
+                  <a href="https://discord.com/invite/zUr7wWYPXE" title="discord">ArtemTur#4088</a>
                </li>
             </ul>
          </section>
