--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
          <nav class="nav">
             <ul class="nav-list">
                <li class="nav-item">
-                  <a href="#contacts" class="nav-link">Contacts</a>
+                  <a href="#contacts" alt="contacts" class="nav-link">Contacts</a>
                </li>
                <li class="nav-item">
-                  <a href="#summary" class="nav-link">Summary</a>
+                  <a href="#summary" alt="summary" class="nav-link">Summary</a>
                </li>
                <li class="nav-item">
-                  <a href="#skills" class="nav-link">Skills</a>
+                  <a href="#skills" alt="skills" class="nav-link">Skills</a>
                </li>
                <li class="nav-item">
-                  <a href="#code" class="nav-link">Code</a>
+                  <a href="#code" alt="code" class="nav-link">Code</a>
                </li>
                <li class="nav-item">
-                  <a href="#projects" class="nav-link">Projects</a>
+                  <a href="#projects" alt="projects" class="nav-link">Projects</a>
                </li>
                <li class="nav-item">
-                  <a href="#education" class="nav-link">Education</a>
+                  <a href="#education" alt="education" class="nav-link">Education</a>
                </li>
                <li class="nav-item">
-                  <a href="#English" class="nav-link">English</a>
+                  <a href="#English" alt="English" class="nav-link">English</a>
                </li>
             </ul>
          </nav>
