--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                </li>
                <li class="section-item contacts-item">
                   Email:
-                  <a href="mailto:tur_ne@mail.ru" title="email">tur_ne@mail.ru</a>
+                  <a href="mailto:tur_ne@mail.ru" alt="email" title="email">tur_ne@mail.ru</a>
                </li>
                <li class="section-item contacts-item">
                   Github:
-                  <a href="https://github.com/ArtemTur" title="github">ArtemTur</a>
+                  <a href="https://github.com/ArtemTur" alt="github" title="github">ArtemTur</a>
                </li>
                <li class="section-item contacts-item">
                   Discord:
-                  <a href="https://discord.com/invite/zUr7wWYPXE" title="discord">ArtemTur#4088</a>
+                  <a href="https://discord.com/invite/zUr7wWYPXE" alt="discord" title="discord">ArtemTur#4088</a>
                </li>
             </ul>
          </section>
@@ -127,11 +127,11 @@
       <div class="container footer-container">
          <div>
             © 2022
-            <a href="https://github.com/ArtemTur" class="github nav-link">
+            <a href="https://github.com/ArtemTur" alt="github-link"class="github nav-link">
                ArtemTur
             </a>
          </div>
-         <a href="https://rs.school/js/" class="rss"></a>
+         <a href="https://rs.school/js/" alt="rsschool" class="rss"></a>
       </div>
    </footer>
 </body>
