--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                ArtemTur
             </a>
          </div>
-         <a href="https://rs.school/js/" alt="rsschool" class="rss"> </a>
+         <a href="https://rs.school/js/" alt="rsschool" class="rss"><span>empty</span></a>
       </div>
    </footer>
 </body>
